2007-12-12  Andreia Gaita <avidigal@novell.com>

	* XPlatUIX11.cs: Send paint messages when updating a systray icon
	* NotifyIcon.cs: Invalidate the window before doing a systray change so it is
	properly invalidated. 
	Fixes #324237

2007-12-10  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewItem.cs: When using a .ctor taking a ListViewGroup,
	don't simply assign it to our internal group field, but instead 
	use our Group property, which should do all the neccessary work
	required to support groups. Fixes an issue reported to me (mail) by a 
	guy using this new feature.

2007-12-11  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: Use Scale instead of ScaleControl to ensure the
	whole hierarchy gets scaled.
	[Fixes bug #347282]

2007-12-10  Jonathan Pobst  <monkey@jpobst.com>

	* DateTimePicker.cs: Don't set the internal MonthCalendar's
	Parent property.  Doing this causes the control to be hosted by
	the Form instead of being a popup window.
	[Fixes bug #347665]

2007-12-10  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItemCollection.cs: If we try to insert a ToolStripItem
	at an index higher than Count, just use Add instead of Insert.
	[Fixes bug #347669]

2007-12-10  Jonathan Pobst  <monkey@jpobst.com>

	* ThemeWin32Classic.cs: Don't draw a PictureBox's background in
	DrawPictureBox, this is handled by Control.PaintBackground.
	[Fixes bug #347276]

2007-12-10  Everaldo Canuto  <ecanuto@novell.com>

	* MenuAPI.cs: When process menu keys return true by default only if menu is
	active. Fixes bug #342892.

2007-12-09  Andreia Gaita <avidigal@novell.com>

	* Control.cs: check if windows are actually mapped before
	trying to zorder. Fixes #342509, #346955

2007-12-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs:
	* ListViewInsertionMark.cs:
	* ThemeWin32Classic.cs: Implement the drawing side of the
	new 2.0 ListView.InsertionMark property.

2007-12-07  Jonathan Pobst  <monkey@jpobst.com>
